add initial styling and fixture data

--- a/app/index.html
+++ b/app/index.html
@@ -9,8 +9,10 @@
 
     {{content-for 'head'}}
 
+    <link href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="assets/vendor.css">
     <link rel="stylesheet" href="assets/detangler.css">
+
 
     {{content-for 'head-footer'}}
   </head>
