Change base styling a bit, tweak form submission.

--- a/app/index.html
+++ b/app/index.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     {{content-for 'head'}}
-
+    <link href='http://fonts.googleapis.com/css?family=Oleo+Script+Swash+Caps|Source+Code+Pro|Flavors' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="assets/vendor.css">
     <link rel="stylesheet" href="assets/detangler.css">
 
